# th-instance-reification

./: .travis.yml  LICENSE  stack.yaml  th-instance-exists.cabal  th-instance-reification.cabal
src/: HTFTestSuite.hs  THInstanceExists.hs  THInstanceReification.hs
src/HTFTestSuite/: Prerequisites.hs
src/THInstanceExists/Prelude/: Basic.hs  TH.hs
src/THInstanceReification/Prelude/: Basic.hs  TH.hs
test/: Main.hs
test/Main/: Prerequisites.hs
