name:
  th-instance-exists
version:
  0.1.0
synopsis:
  Fixed versions of instances reification functions
description:
  Provides a fixed version of 'reifyInstances' and 'isInstance' as per
  the following ghc issue:
  <https://ghc.haskell.org/trac/ghc/ticket/7066>.
category:
  Template Haskell
homepage:
  https://github.com/nikita-volkov/th-instance-exists 
bug-reports:
  https://github.com/nikita-volkov/th-instance-exists/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/th-instance-exists.git


library
  hs-source-dirs:
    src
  other-modules:
    THInstanceExists.Prelude.Basic
    THInstanceExists.Prelude.TH
  exposed-modules:
    THInstanceExists
  build-depends:
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    template-haskell,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010


test-suite th-instance-exists-htf-test-suite
  type:             
    exitcode-stdio-1.0
  hs-source-dirs:   
    src
  main-is:          
    HTFTestSuite.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:
    -- testing:
    quickcheck-instances,
    QuickCheck-GenT == 0.1.*,
    QuickCheck,
    HUnit,
    HTF == 0.11.*,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    template-haskell,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010

